--- a/scriptie/bachproef/apis.tex
+++ b/scriptie/bachproef/apis.tex
@@ -12,7 +12,7 @@ Wanneer een app gebruik wilt maken van data die niet door de eindgebruiker is in
 \section{Opzet}
 Voor dit deel van het onderzoek werd gebruik gemaakt van een online API en de al dan niet ingebouwde platform specifieke functionaliteiten voor het aanspreken van deze services. In de onderzoeksapplicatie werden verschillende API calls gedaan die later in dit hoofdstuk worden beschreven.
 
-Eén van de bekendere en meest gebruiksvriendelijke API’s op het web is de PokéApi. Deze RESTful API, die informatie biedt omtrent allerlei Pokémon, is goed ondersteunt en duidelijk gedocumenteerd. Deze documentatie is te lezen op een overzichtelijke site.
+Voor dit deel van het onderzoek werden simpele, gratis, goed gedocumenteerde API's aangesproken.
 
 Tijdens het uitvoeren van dit experiment, werd gebruik gemaakt van zogenaamde data klassen. Deze klassen worden onder andere gebruikt om de verschillende objecten op te bouwen die terugkomen van de API. 
 
