--- a/scriptie/bachproef/bachproef-tin.tex
+++ b/scriptie/bachproef/bachproef-tin.tex
@@ -8,6 +8,7 @@
 \usepackage{hogent-thesis-titlepage} % Titelpagina conform aan HOGENT huisstijl
 \usepackage{array}
 \usepackage{graphicx}
+\usepackage{listings}
 \graphicspath{ {./img/} }
 
 %%---------- Documenteigenschappen ---------------------------------------------
