--- a/scriptie/bachproef/conclusie.tex
+++ b/scriptie/bachproef/conclusie.tex
@@ -5,7 +5,7 @@
 \chapter{Conclusie}
 \label{ch:conclusie}
 
-% TODO: Trek een duidelijke conclusie, in de vorm van een antwoord op de
+% Trek een duidelijke conclusie, in de vorm van een antwoord op de
 % onderzoeksvra(a)g(en). Wat was jouw bijdrage aan het onderzoeksdomein en
 % hoe biedt dit meerwaarde aan het vakgebied/doelgroep? 
 % Reflecteer kritisch over het resultaat. In Engelse teksten wordt deze sectie
@@ -15,21 +15,20 @@
 %onderzoek?
 
 % Trek een duidelijke conclusie, in de vorm van een antwoord op de onderzoeksvra(a)g(en). Wat was jouw bijdrage aan het onderzoeksdomein en hoe biedt dit meerwaarde aan het vakgebied/doelgroep?
+Voor elk van voorgaande onderzoekscriteria kan gezegd worden dat Flutter een goed, als niet beter alternatief biedt voor native Android.
+
 
 Al is het moeilijk om te laten uit blijken of Flutter al een volwaardige tegenstander is voor Android. Indien een grotere app ontwikkeld wordt met complexe features kan dit pas bekeken worden.
 
 Voor simpele applicaties met weinig complexe features lijkt het daarom wel de beste optie. Echter wanneer een ontwikkelaar wilt groeien en bijleren zal hij al snel stoten op de werkelijkheid van het framework. De kennis over native Android en iOS hoeft echter niet uitgebreid te zijn. Maar Flutter vergt wel kennis over onderliggende Frameworks wanneer men uitgebreidere Flutter apps begint te ontwikkelen 
 
+Flutter biedt een goed alternatief op native Android ontwikkeling.
+
+
+
 
 % Reflecteer kritisch over het resultaat. Had je deze uitkomst verwacht? Zijn er zaken die nog niet duidelijk zijn?
+Daarbuiten is het ook belangrijk om rekening te houden met de omvang van de applicaties. Beide apps zijn klein en bevatten geen ingewikkelde features. Indien een grotere Flutter app ontwikkeld wordt De resultaten en conclusie van dit onderzoek slaan dus alleen op kleine Flutter apps. Ook zijn bepaalde delen van het onderzoek open voor discussie. Zowel de resultaten van CPU gebruik als die van opstartsnelheid worden in vraag gesteld. Zo werden niet alle omgevingsvariabelen weg gehaald voor en tijdens het onderzoek. Deze conclusie ligt in lijn met de hypotheses op de onderzoeksvragen. De literatuurstudie gaf duidelijk inzicht in het Flutter framework, hieruit kon een objectief beeld gevormd worden over de werking en de voor- en nadelen van de Flutter stack. 
 
-Het blijft belangrijk om de omvang van de applicaties in rekening te houden.
-Ook zijn bepaalde delen van het onderzoek open voor discussie. Zo werden niet alle omgevingsvariabelen weg gehaald voor en tijdens het onderzoek. 
-
-Complexe 
-
-Deze conclusie van het onderzoek ligt in lijn met de hypotheses op de onderzoeksvragen. De literatuurstudie gaf duidelijk inzicht in het Flutter framework, hieruit kon een objectief beeld gevormd worden over de werking en de voor- en nadelen van de Flutter stack. 
-
-% Heeft het onderzoek geleid tot nieuwe vragen die uitnodigen tot verder 
-\textbf{Verder onderzoek}
-Het is noodzakelijk dat de iOS 
+% Heeft het onderzoek geleid tot nieuwe vragen die uitnodigen tot verder
+Dit onderzoek spitste zich toe op het vergelijken van native Android apps met Flutter apps, echter viel een vergelijking met iOS buiten deze scope. In verder onderzoek zou deze vergelijking kunnen gemaakt worden. Hieruit kan dan een volwaardig beeld worden geschetst van de huidige stand van het Flutter framework tegenover native ontwikkeling. Daarnaast kan verder onderzoek gedaan worden naar Flutter app performantie. Deze metric zal normaal blijven verbeteren naarmate het platform groeit. Om dit te kunnen toetsen is toekomstig onderzoek een must. Door deze performantie resultaten te vergelijken over de jaren heen kan gekeken worden naar de groei van Flutter. Als laatste kan de schaalbaarheid van Flutter apps een interessant onderzoeksdomein vormen voor de bedrijfswereld. Professionele apps bevatten meestal veel complexe features die Android op een goede manier integreert. Indien Flutter meer tractie wenst te krijgen moet het een uitwerking of alternatief kunnen bieden voor elke van deze features.
