--- a/scriptie/bachproef/performantie.tex
+++ b/scriptie/bachproef/performantie.tex
@@ -5,11 +5,9 @@
 
 \chapter{\IfLanguageName{dutch}{Performantie}{Performance}}
 \label{ch:performantie}
-Dit hoofdstuk zal het performantie aspect van de applicatie behandelen. Ondanks het feit dat nieuwe smartphones alsmaar performanter worden, is het nog steeds belangrijk om belang te hechten aan de performantie van een applicatie tijdens de ontwikkeling. Hetgeen evenredig stijgt met de performantie van nieuwe smartphones, zijn de gebruikersverwachtingen van de apps. Het is belangrijk dat app ontwikkelaars de applicatie zo schrijven dat deze de beste performantie biedt aan de gebruiker. Elke app ontwikkelaar heeft namelijk als hoofddoel het ontwikkelen van een app die veel gebruikt wordt en een goede ervaring bezorgd aan de gebruiker. Wanneer een app niet voldoet aan de gebruikerseisen zal deze stoppen met de app te gebruiken, deze verwijderen en misschien zelf een negatieve review achterlaten. Wat op zijn beurt leidt tot minder gebruikers en minder downloads. 
+Dit hoofdstuk zal het performantie aspect van de applicaties behandelen. Ondanks het feit dat nieuwe smartphones alsmaar performanter worden, moet nog steeds belang gehecht worden aan de performantie van een applicatie tijdens de ontwikkeling. Hetgeen evenredig stijgt met de performantie van nieuwe smartphones, zijn de gebruikersverwachtingen van de apps. Het is belangrijk dat app ontwikkelaars een applicatie zo schrijven dat deze de beste performantie biedt aan de gebruiker. Elke app ontwikkelaar heeft namelijk als hoofddoel het ontwikkelen van een app die veel gebruikt wordt en een goede ervaring bezorgd aan de gebruiker. Wanneer een app niet voldoet aan de gebruikerseisen zal deze stoppen met de app te gebruiken, deze verwijderen en misschien zelf een negatieve review achterlaten. Wat op zijn beurt leidt tot minder gebruikers en minder downloads. 
 
-Er zijn verschillende aspecten die de performantie van een app beïnvloeden. Deze kunnen onderverdeeld worden in verschillende categorieën. In dit onderzoek werd alleen gefocust op de app performantie. Hieronder vallen laadsnelheid, batterij verbruik, geheugen gebruik, grootte van het uitvoeringsbestand, geheugen gebruik van de app in achtergrond… Dit onderzoek spitst zich toe op opstartsnelheid, grootte van de uitvoeringsbestanden en CPU gebruik. Ook moet rekening gehouden worden met de samenhang tussen performantie en gebruikte hardware. De gebruikte hardware voor dit onderzoek werd vermeld in vorige hoofdstuk.
-
-Het is dus belangrijk om een performante app te ontwikkelen maar het gebruikte framework zit hier ook voor een deel tussen. Het doel van dit hoofdstuk is het vergelijken van deze onderliggende verschillen. Deze worden hieronder kort toegelicht.
+Er zijn verschillende aspecten die de performantie van een app beïnvloeden. Deze kunnen onderverdeeld worden in verschillende categorieën. In dit onderzoek werd alleen gefocust op de app performantie. Hieronder vallen laadsnelheid, batterij verbruik, geheugen gebruik, grootte van het uitvoeringsbestand, geheugen gebruik van de app in achtergrond… Dit onderzoek spitst zich toe op opstartsnelheid, grootte van de uitvoeringsbestanden en CPU gebruik. Ook moet rekening gehouden worden met de samenhang tussen performantie en gebruikte hardware. De gebruikte hardware voor dit onderzoek werd vermeld in vorige hoofdstuk. Het is dus belangrijk om een performante app te ontwikkelen maar het gebruikte framework zit hier ook voor een deel tussen. Het doel van dit hoofdstuk is het vergelijken van deze onderliggende verschillen. Deze worden hieronder kort toegelicht.
 
 \input{uitvoeringsbestanden}
 \input{opstartsnelheid}
@@ -18,8 +16,5 @@ Het is dus belangrijk om een performante app te ontwikkelen maar het gebruikte f
 
 \section{Conclusie}
 \label{sec:perfConclusie}
-bij grotere Flutter APK’s wordt het verschil klein en insignificant.
 
-Wat uit deze resultaten kan geconcludeerd worden is dat een duidelijk verschil is tussen enerzijds de native APK’s en de cross-platform APK’s. Het is namelijk zo dat native APK’s aanzienlijk kleiner zijn in vergelijking met hun cross-platform tegenhangers.
-
-Het testen op CPU-verschillen in de applicaties toonde aan dat er niet veel verschil was in CPU-gebruik tussen native Android builds en Flutter builds. Dit zou het gevolg kunnen zijn van het gebruik van een kleine applicatie. Het experiment zou andere resultaten kunnen opleveren als dit deel van het onderzoek op een grotere applicatie werd uitgevoerd.
+Als eerste werden de uitvoeringsbestanden onderzocht. Wat uit deze resultaten kan geconcludeerd worden is dat een duidelijk verschil bestaat tussen enerzijds de native APK’s en anderzijds de cross-platform APK’s. Het is namelijk zo dat native APK’s aanzienlijk kleiner zijn in vergelijking met hun cross-platform tegenhangers. Dit komt door de Flutter Engine die mee moet verpakt worden in de APK's. Een minimale Flutter APK is 4,6 MB groot wat 3,9 MB groter is als een minimale Android APK. Echter bij grotere APK’s wordt het verschil tussen Android en Flutter eerder klein en insignificant. Vervolgens werden de opstartsnelheden vergeleken. Hier bleek Flutter een voordeel te hebben over Android, echter was dit verschil klein en amper waarneembaar voor een gebruiker. De Flutter app was gemiddeld 227ms sneller dan de Android app. Het testen op CPU-verschillen in de applicaties toonde aan dat er niet veel verschil was in CPU-gebruik tussen native Android builds en Flutter builds. Dit zou het gevolg kunnen zijn van het gebruik van een kleine applicatie. Het experiment zou andere resultaten kunnen opleveren als dit deel van het onderzoek op een grotere applicatie werd uitgevoerd. Dus uitgesloten de APK omvang zijn deze performantie criteria van de twee platformen gelijkaardig te noemen.
