--- a/scriptie/bachproef/bachproef-tin.bib
+++ b/scriptie/bachproef/bachproef-tin.bib
@@ -121,4 +121,17 @@
   organization = {Flutter},
 }
 
+@Online{DePauw2021,
+  author = {Sébastien {De Pauw}},
+  date   = {2021-08-27},
+  title  = {Broncode applicaties},
+  url    = {https://github.com/SebastienDePauw/BachelorProef-2020-2021},
+}
+
+@WWW{Flutter,
+  author = {Flutter},
+  title  = {Flutter website},
+  url    = {https://flutter.dev},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
