--- a/scriptie/bachproef/samenvatting.tex
+++ b/scriptie/bachproef/samenvatting.tex
@@ -21,21 +21,5 @@
 % De samenvatting in de hoofdtaal van het document
 
 \chapter*{\IfLanguageName{dutch}{Samenvatting}{Abstract}}
-Vier jaar geleden werd Flutter uitgebracht door Google. In deze vier jaar werd Flutter de meest gebruikte cross-platform ontwikkelings-stack. Het overtreft zijn concurrentie, sommige die al meer als 10 jaar bestaan. 
-
 % - Context: waarom is dit werk belangrijk?
-
-
-% - Nood: waarom moest dit onderzocht worden?
-
-% - Taak: wat heb je precies gedaan?
-
-% - Object: wat staat in dit document geschreven?
-
-% - Resultaat: wat was het resultaat?
-
-% - Conclusie: wat is/zijn de belangrijkste conclusie(s)?
-
-% - Perspectief: blijven er nog vragen open die in de toekomst nog kunnen
-%    onderzocht worden? Wat is een mogelijk vervolg voor jouw onderzoek?
-Echter zijn na dit onderzoek niet alle vragen beantwoord. 
+Flutter is een framework voor het bouwen van applicaties voor mobiele, web- en desktopplatformen vanuit een enkele codebase. Sinds de eerste officiële release door Google vier jaar geleden, wint het enorm veel populariteit onder applicatie ontwikkelaars. Mensen hebben vertrouwen in het platform waardoor zowel Dart als Flutter in een stroomversnelling zijn geraakt. De snelle vooruitgang van het framework maakt bestaande onderzoeken dan ook direct verouderd. De ontwikkeling van het framework gaat zo snel dat de bruikbaarheid ervan in professionele context onduidelijk is. Daarom werd in dit onderzoek gekeken hoe Flutter zich verhoudt tot native applicaties, die momenteel als superieur worden beschouwd in mobiel gedrag en prestaties. Om de resultaten van het experiment te versterken en een achtergrond te geven bij het onderwerp is een literatuurstudie uitgevoerd. Voor dit onderzoek zijn twee paar applicaties ontwikkeld die onderling vergeleken werden. Deze scriptie onderzocht een aantal criteria om een antwoord te kunnen vormen op de onderzoeksvraag. Zo werden drie performantie criteria onderzocht: grootte van het uitvoeringsbestand, opstartsnelheid en cpu gebruik van de applicatie. Daarnaast werd ook nog onderzoek verricht naar mogelijkheden tot asynchroon werk, opties voor netwerk verzoeken, best-practices rond app veiligheid, code complexiteit van elk platform en gebruik van command line tools. Bevindingen die hieruit voortkwamen leidde tot een conclusie over Flutter. Ontwikkeling van kleine apps in het krachtige maar toegankelijke framework heeft meer voordelen als nadelen. Hierbij dient wel rekening gehouden te worden met de grootte van het uitvoeringsbestand, dit is echter een kleine afweging tegen de tijd en kost besparing. Android daarentegen deed op veel vlakken onder aan Flutter. Na dit onderzoek waren niet alle vragen beantwoord. Zo werd de vergelijking tussen Flutter en native iOS niet onderzocht. Ook kan het interessant zijn om de performantie metrics te blijven onderzoeken bij elke update, omdat zo een duidelijk beeld kan geschetst worden van de Flutter performantie over de jaren heen. Als laatste kan de schaalbaarheid van Flutter apps een interessant onderzoeksdomein vormen voor de bedrijfswereld. 
